*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -447,12 +447,12 @@
 | [[Boršod-Abauj-Zemplen]]
 | 6750
 |-
-| '''[[Fertod]]'''
+| '''[[Fertöd]]'''
 | [[Päivlaskmdunajantagaine rand]]
 | [[D'jor-Mošon-Šopron]]
 | 3461
 |-
-| '''[[Fertosentmikoš]]'''
+| '''[[Fertösentmikloš]]'''
 | [[Päivlaskmdunajantagaine rand]]
 | [[D'jor-Mošon-Šopron]]
 | 3891
@@ -467,12 +467,12 @@
 | [[Pešt]]
 | 18968
 |-
-| '''[[Fuzešabon'j]]'''
+| '''[[Füzešabon']]'''
 | [[Pohjoižmad'jaranma]]
 | [[Heveš]]
 | 7781
 |-
-| '''[[Fuzešd'jarmat]]'''
+| '''[[Füzešd'jarmat]]'''
 | [[Suvial'föl'd rand]]
 | [[Bekeš]]
 | 5665
@@ -482,42 +482,42 @@
 | [[Fejer]]
 | 9927
 |-
-| '''[[God]]'''
+| '''[[Göd]]'''
 | [[Keskuzmad'jaranma]]
 | [[Pešt]]
 | 18565
 |-
-| '''[[Godollo]]'''
+| '''[[Gödöllö]]'''
 | [[Keskuzmad'jaranma]]
 | [[Pešt]]
 | 34172
 |-
-| '''[[Gonc]]'''
+| '''[[Gönc]]'''
 | [[Pohjoižmad'jaranma]]
 | [[Boršod-Abauj-Zemplen]]
 | 1951
 |-
-| '''[[D'jal]]'''
+| '''[[D'jal']]'''
 | [[Keskuzmad'jaranma]]
 | [[Pešt]]
 | 23486
 |-
-| '''[[D'jomaendrod]]
+| '''[[D'jömaendröd]]
 | [[Suvial'föl'd rand]]
 | [[Bekeš]]
 | 13674
 |-
-| '''[[D'jomro]]'''
+| '''[[D'jomrö]]'''
 | [[Keskuzmad'jaranma]]
 | [[Pešt]]
 | 16670
 |-
-| '''[[D'jond'jos]]'''
+| '''[[D'jond'još]]'''
 | [[Pohjoižmad'jaranma]]
 | [[Heveš]]
 | 32385
 |-
-| '''[[D'jond'jospata]]'''
+| '''[[D'jond'jošpat]]'''
 | [[Pohjoižmad'jaranma]]
 | [[Heveš]]
 | 2472
@@ -532,17 +532,17 @@
 | [[D'jor-Mošon-Šopron]]
 | 131564
 |-
-| '''[[D'jula]]'''
+| '''[[D'jul (lidn)|D'jul]]'''
 | [[Suvial'föl'd rand]]
 | [[Bekeš]]
 | 31679
 |-
-| '''[[Hajdubosormen'j]]
+| '''[[Haidubösörmen']]
 | [[Pohjoine Al'föl'd]]
 | [[Hajdu-Bihar]]
 | 31306
 |-
-| '''[[Hajdudorog]]'''
+| '''[[Haidudorog]]'''
 | [[Pohjoine Al'föl'd]]
 | [[Hajdu-Bihar]]
 | 8888
