*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -13,12 +13,12 @@
 |-
 | '''[[Abadsalok]]'''
 | [[Pohjoine Al'föl'd]] 
-| [[Jas-Nad'jkun-Solnok]]
+| [[Jas Nad'kun Sol'nok]]
 | 3922
 |-
 | '''[[Abauisanto]]'''
 | [[Pohjoižmad'jaranma]]
-| [[Borsod-Abauj-Zemplen]]
+| [[Boršod Abaui Zemplen]]
 | 3088
 |-
 | '''[[Abon']]'''
@@ -28,7 +28,7 @@
 |-
 | '''[[Ač (lidn)|Ač]]'''
 | [[Keskuzdunajantagaine rand]]
-| [[Komarom-Estergom]]
+| [[Komarom Estergom]]
 | 6965
 
 |-
@@ -39,7 +39,7 @@
 |-
 | '''[[Ajäk]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Sabolč-Satmar-Bereg]]
+| [[Sabol'č Satmar Bereg]]
 | 3528
 |-
 | '''[[Aik]]'''
@@ -54,7 +54,7 @@
 |-
 | '''[[Al'šožol'c]]'''
 | [[Pohjoižmad'jaranma]]
-| [[Boršod-Abauj-Zemplen]]
+| [[Boršod Abaui Zemplen]]
 | 5937
 |-
 | '''[[Asod]]'''
@@ -64,12 +64,12 @@
 |-
 | '''[[Babol'n]]'''
 | [[Keskuzdunajantagaine rand]]
-| [[Komarom-Estergom]]
+| [[Komarom Estergom]]
 | 3654
 |-
 | '''[[Bačal'maš]]'''
 | [[Suvilal'föl'd]]
-| [[Bač-Kiškun]]
+| [[Bač Kiškun]]
 | 6697
 |-
 | '''[[Badačon'tomai]]'''
@@ -79,17 +79,17 @@
 |-
 | '''[[Bai]]'''
 | [[Suvial'föl'd]]
-| [[Bač-Kiškun]]
+| [[Bač Kiškun]]
 | 37330
 |-
 | '''[[Baktaloranthaz]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Sabolč-Satmar-Bereg]]
+| [[Sabol'č Satmar Bereg]]
 | 4302
 |-
 | '''[[Balaššad'jarmat]]'''
 | [[Pohjoižmad'jaranma]]
-| [[Nograd]]
+| [[Nograd (agj)|Nograd]]
 | 16133
 |-
 | '''[[Balatonal'madi]]'''
@@ -99,12 +99,12 @@
 |-
 | '''[[Balatonboglar]]'''
 | [[Suvidunajantagaine rand]]
-| [[Šomod']]
+| [[Šomod' (agj)|Šomod']]
 | 5932
 |-
 | '''[[Balatonfel'dvar]]'''
 | [[Suvidunajantagaine rand]]
-| [[Šomod']]
+| [[Šomod' (agj)|Šomod']]
 | 2064
 |-
 | '''[[Balatonfüred]]'''
@@ -124,32 +124,32 @@
 |-
 | '''[[Balatonlelle]]'''
 | [[Suvidunajantagaine rand]]
-| [[Šomod']]
+| [[Šomod' (agj)|Šomod']]
 | 4735
 |-
 | '''[[Bal'kan']]'''
 | [[Pohjoine Al'föl'd]]
-| [[Sabolč-Satmar-Bereg]]
+| [[Sabol'č Satmar Bereg]]
 | 6215
 |-
 | '''[[Bal'mazuivaroš]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Hajdú-Bihar]]
+| [[Haidu Bihar]]
 | 17354
 |-
 | '''[[Barč (lidn)|Barč]]'''
 | [[Suvidunajantagaine rand]]
-| [[Baran'ja]]
+| [[Baran'j (agj)|Baran'j]]
 | 11378
 |-
 | '''[[Batasek]]'''
 | [[Suvidunajantagaine rand]]
-| [[Tolna]]
+| [[Tol'n]]
 | 6388
 |-
 | '''[[Baton'teren'je]]'''
 | [[Pohjoižmad'jaranma]]
-| [[Nograd]]
+| [[Nograd (agj)|Nograd]]
 | 12604
 |-
 | '''[[Batton'j]]'''
@@ -174,12 +174,12 @@
 |-
 | '''[[Beled]]'''
 | [[Päivlaskmdunajantagaine rand]]
-| [[D'jor-Mošon-Šopron]]
+| [[D'jor Mošon Šopron]]
 | 2553
 |-
 | '''[[Berettöuifalu]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Hajdu-Bihar]]
+| [[Haidu Bihar]]
 | 15167
 |-
 | '''[[Berhid]]'''
@@ -189,7 +189,7 @@
 |-
 | '''[[Bešen'söd]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Jas-Nad'jkun-Solnok]]
+| [[Jas Nad'kun Solnok]]
 | 3372
 |-
 | '''[[Biatorbad']]'''
@@ -204,7 +204,7 @@
 |-
 | '''[[Biharkeresteš]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Hajdu-Bihar]]
+| [[Haidu Bihar]]
 | 3688
 |-
 | '''[[Bodaik]]'''
@@ -214,17 +214,17 @@
 |-
 | '''[[Boi (lidn, Mad'jaranma)|Boi]]'''
 | [[Suvidunajantagaine rand]]
-| [[Baran'j]]
+| [[Baran'j (agj)|Baran'j]]
 | 3996
 |-
 | '''[[Bon'had]]'''
 | [[Suvidunajantagaine rand]]
-| [[Tolna]]
+| [[Tol'n]]
 | 13741
 |-
 | '''[[Boršodnadašt]]'''
 | [[Pohjoižmad'jaranma]]
-| [[Boršod-Abauj-Zemplen]]
+| [[Boršod Abaui Zemplen]]
 | 3007
 |-
 | '''[[Budakalas]]'''
@@ -264,7 +264,7 @@
 |-
 | '''[[Cigand]]'''
 | [[Pohjoižmad'jaranma]]
-| [[Boršod-Abauj-Zemplen]]
+| [[Boršod Abaui Zemplen]]
 | 2682
 |-
 | '''[[Čakvar]]'''
@@ -274,12 +274,12 @@
 |-
 | '''[[Čanadpalot]]'''
 | [[Suvial'föl'd]]
-| [[Čongrad]]
+| [[Čongrad (agj)|Čongrad]]
 | 2968
 |-
 | '''[[Čenger]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Sabolč-Satmar-Bereg]]
+| [[Sabol'č Satmar Bereg]]
 | 4730
 |-
 | '''[[Čepreg]]'''
@@ -289,12 +289,12 @@
 |-
 | '''[[Čongrad (lidn)|Čongrad]]'''
 | [[Suvial'föl'd]]
-| [[Čongrad (agjoihe)|Čongrad]]
+| [[Čongrad (agj)|Čongrad]]
 | 16846
 |-
 | '''[[Čorn]]'''
 | [[Päivlaskmdunajantagaine rand]]
-| [[D'jor-Mošon-Šopron]]
+| [[D'jor Mošon Šopron]]
 | 10649
 |-
 | '''[[Čorvaš]]'''
@@ -304,7 +304,7 @@
 |-
 | '''[[Čurgo]]'''
 | [[Suvidunajantagaine rand]]
-| [[Šomod']]
+| [[Šomod' (agj)|Šomod']]
 | 5186
 |-
 | '''[[Dabaš]]'''
@@ -314,17 +314,17 @@
 |-
 | '''[[Debrecen]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Hajdu-Bihar]]
+| [[Haidu Bihar]]
 | 207594
 |-
 | '''[[Demečer]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Sabolč-Satmar-Bereg]]
+| [[Sabol'č Satmar Bereg]]
 | 4280
 |-
 | '''[[Derečke]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Hajdu-Bihar]]
+| [[Haidu Bihar]]
 | 8906
 |-
 | '''[[Devavan'j]]'''
@@ -344,7 +344,7 @@
 |-
 | '''[[Dombovar]]'''
 | [[Suvidunajantagaine rand]]
-| [[Tolna]]
+| [[Tol'n]]
 | 19494
 |-
 | '''[[Dombrad]]'''
@@ -354,12 +354,12 @@
 |-
 | '''[[Dorog]]'''
 | [[Keskuzdunajantagaine rand]]
-| [[Komarom-Estergom]]
+| [[Komarom Estergom]]
 | 11996
 |-
 | '''[[Dunafül'dvar]]'''
 | [[Suvidunajantagaine rand]]
-| [[Tolna]]
+| [[Tol'n]]
 | 8666
 |-
 | '''[[Dunaharasti]]'''
@@ -384,12 +384,12 @@
 |-
 | '''[[Dunaveče]]'''
 | [[Suvial'föl'd]]
-| [[Bač-Kiskun]]
+| [[Bač Kiskun]]
 | 3937
 |-
 | '''[[Edelen']]'''
 | [[Pohjoižmad'jaranma]]
-| [[Boršod-Abauj-Zemplen]]
+| [[Boršod Abaui Zemplen]]
 | 10019
 |-
 | '''[[Eger (lidn)|Eger]]'''
@@ -404,12 +404,12 @@
 |-
 | '''[[Emöd]]'''
 | [[Pohjoižmad'jaranma]]
-| [[Boršod-Abauj-Zemplen]]
+| [[Boršod Abaui Zemplen]]
 | 4895
 |-
 | '''[[Enč]]'''
 | [[Pohjoižmad'jaranma]]
-| [[Boršod-Abauj-Zemplen]]
+| [[Boršod Abaui Zemplen]]
 | 6201
 |-
 | '''[[En'jing]]'''
@@ -429,37 +429,37 @@
 |-
 | '''[[Estergom]]'''
 | [[Keskuzdunajantagaine rand]]
-| [[Komarom-Estergom]]
+| [[Komarom Estergom]]
 | 30434
 |-
 | '''[[Fed'vernek]]'''
 | [[Pohjoine Al'föl'd]] 
-| [[Jas-Nad'jkun-Solnok]]
+| [[Jas Nad'kun Solnok]]
 | 6415
 |-
 | '''[[Feherd'jarmat]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Sabolč-Satmar-Bereg]]
+| [[Sabol'č Satmar Bereg]]
 | 7861
 |-
 | '''[[Fel'šožol'c]]'''
 | [[Pohjoižmad'jaranma]]
-| [[Boršod-Abauj-Zemplen]]
+| [[Boršod Abaui Zemplen]]
 | 6750
 |-
 | '''[[Fertöd]]'''
 | [[Päivlaskmdunajantagaine rand]]
-| [[D'jor-Mošon-Šopron]]
+| [[D'jor Mošon Šopron]]
 | 3461
 |-
 | '''[[Fertösentmikloš]]'''
 | [[Päivlaskmdunajantagaine rand]]
-| [[D'jor-Mošon-Šopron]]
+| [[D'jor Mošon Šopron]]
 | 3891
 |-
 | '''[[Fon'jod]]'''
 | [[Suvidunajantagaine rand]]
-| [[Šomod']]
+| [[Šomod' (agj)|Šomod']]
 | 4728
 |-
 | '''[[Fot]]'''
@@ -494,7 +494,7 @@
 |-
 | '''[[Gönc]]'''
 | [[Pohjoižmad'jaranma]]
-| [[Boršod-Abauj-Zemplen]]
+| [[Boršod Abaui Zemplen]]
 | 1951
 |-
 | '''[[D'jal']]'''
@@ -524,12 +524,12 @@
 |-
 | '''[[D'jonk]]'''
 | [[Suvidunajantagaine rand]]
-| [[Tolna]]
+| [[Tol'n]]
 | 2066
 |-
 | '''[[D'jor]]'''
 | [[Päivlaskmdunajantagaine rand]]
-| [[D'jor-Mošon-Šopron]]
+| [[D'jor Mošon Šopron]]
 | 131564
 |-
 | '''[[D'jul (lidn)|D'jul]]'''
@@ -539,12 +539,12 @@
 |-
 | '''[[Haidubösörmen']]
 | [[Pohjoine Al'föl'd]]
-| [[Hajdu-Bihar]]
+| [[Haidu Bihar]]
 | 31306
 |-
 | '''[[Haidudorog]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Hajdu-Bihar]]
+| [[Haidu Bihar]]
 | 8888
 |}
 
