*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -169,7 +169,7 @@
 |-
 | '''[[Belapatfalv]]'''
 | [[Pohjoižmad'jaranma]]
-| [[Heveš]]
+| [[Heveš (agj)|Heveš]]
 | 2996
 |-
 | '''[[Beled]]'''
@@ -394,7 +394,7 @@
 |-
 | '''[[Eger (lidn)|Eger]]'''
 | [[Pohjoižmad'jaranma]]
-| [[Heveš]]
+| [[Heveš (agj|Heveš]]
 | 56166
 |-
 | '''[[Elek]]'''
@@ -469,7 +469,7 @@
 |-
 | '''[[Füzešabon']]'''
 | [[Pohjoižmad'jaranma]]
-| [[Heveš]]
+| [[Heveš (agj)|Heveš]]
 | 7781
 |-
 | '''[[Füzešd'jarmat]]'''
@@ -514,12 +514,12 @@
 |-
 | '''[[D'jond'još]]'''
 | [[Pohjoižmad'jaranma]]
-| [[Heveš]]
+| [[Heveš (agj)|Heveš]]
 | 32385
 |-
 | '''[[D'jond'jošpat]]'''
 | [[Pohjoižmad'jaranma]]
-| [[Heveš]]
+| [[Heveš (agj)|Heveš]]
 | 2472
 |-
 | '''[[D'jonk]]'''
@@ -546,6 +546,251 @@
 | [[Pohjoine Al'föl'd]]
 | [[Haidu Bihar]]
 | 8888
+|-
+| '''[[Haiduhadhaz]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Haidu Bihar]]
+| 12458
+|-
+| '''[[Haidunanaš]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Haidu Bihar]]
+| 16975
+|-
+| '''[[Haidusamson]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Haidu Bihar]]
+| 13105
+|-
+| '''[[Haidusoboslo]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Haidu Bihar]]
+| 23309
+|-
+| '''[[Haios]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Boršod Abaui Zemplen]]
+| 3134
+|-
+| '''[[Halastelek]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 9310
+|-
+| '''[[Harkan']]'''
+| [[Suvidunajantagaine rand]]
+| [[Baran'j (agj)|Baran'j]]
+| 4065
+|-
+| '''[[Hatvan]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Heveš (agj)|Heveš]]
+| 20259
+|-
+| '''[[Herend]]'''
+| [[Keskuzdunajantagaine rand]]
+| [[Vesprem]]
+| 3339
+|-
+| '''[[Heveš (lidn)|Heveš]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Heveš (agj)|Heveš]]
+| 10464
+|-
+| '''[[Heviz]]'''
+| [[Päivlaskmdunajantagaine rand]]
+| [[Zal' (agj)|Zal']]
+| 4375
+|-
+| '''[[Hodmezovašarhej]]'''
+| [[Suvial'föl'd rand]]
+| [[Čongrad (agj)|Čongrad]]
+| 46522
+|-
+| '''[[Ibran']]'''
+| [[Pohjoine Al'föl'd]]
+| [[Sabol'č Satmar Bereg]]
+| 6842
+|-
+| '''[[Igal]]'''
+| [[Suvidunajantagaine rand]]
+| [[Šomod' (agj)|Šomod']]
+| 1308
+|-
+| '''[[Išaseg]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 11397
+|-
+| '''[[Ižak]]'''
+| [[Suvial'föl'd]]
+| [[Bač Kiskun]]
+| 5904
+|-
+| '''[[Janošhalma]]'''
+| [[Suvial'föl'd]]
+| [[Bač Kiskun]]
+| 8937
+|-
+| '''[[Janošhaza]]'''
+| [[Päivlaskmdunajantagaine rand]]
+| [[Vaš]]
+| 2401
+|-
+| '''[[Janoššomorja]]'''
+| [[Päivlaskmdunajantagaine rand]]
+| [[D'jor Mošon Šopron]]
+| 5912
+|-
+| '''[[Jasapati]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Jas Nad'kun Solnok]]
+| 8947
+|-
+| '''[[Jasaroksallaš]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Jas Nad'kun Solnok]]
+| 7806
+|-
+| '''[[Jasberen']]'''
+| [[Pohjoine Al'föl'd]]
+| [[Jas Nad'kun Solnok]]
+| 26924
+|-
+| '''[[Jasfen'saru]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Jas Nad'kun Solnok]]
+| 5621
+|-
+| '''[[Jaskišer]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Jas Nad'kun Solnok]]
+| 5165
+|-
+| '''[[Kaba]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Haidu Bihar]]
+| 5932
+|-
+| '''[[Kadarkut]]'''
+| [[Suvidunajantagaine rand]]
+| [[Šomod' (agj)|Šomod']]
+| 2583
+|-
+| '''[[Kaloča]]'''
+| [[Suvial'föl'd]]
+| [[Bač Kiskun]]
+| 16959
+|-
+| '''[[Kapošvar]]'''
+| [[Suvidunajantagaine rand]]
+| [[Šomod' (agj)|Šomod']]
+| 67686
+|-
+| '''[[Kapuvar]]'''
+| [[Päivlaskmdunajantagaine rand]]
+| [[D'jor Mošon Šopron]]
+| 10353
+|-
+| '''[[Karcag]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Jas Nad'kun Solnok]]
+| 19980
+|-
+| '''[[Kazincbarcika]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Boršod Abaui Zemplen]]
+| 28664
+|-
+| '''[[Kecel]]'''
+| [[Suvial'föl'd]]
+| [[Bač Kiskun]]
+| 8687
+|-
+| '''[[Kečkemet]]'''
+| [[Suvial'föl'd]]
+| [[Bač Kiskun]]
+| 114226
+|-
+| '''[[Kemeče]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Sabol'č Satmar Bereg]]
+| 4736
+|-
+| '''[[Kendereš]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Jas Nad'kun Solnok]]
+| 4647
+|-
+| '''[[Kereked'jhaza]]'''
+| [[Suvial'föl'd]]
+| [[Bač Kiskun]]
+| 6300
+|-
+| '''[[Kerepeš]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 10087
+|-
+| '''[[Kesthei]]'''
+| [[Päivlaskmdunajantagaine rand]]
+| [[Zal' (agj)|Zal']]
+| 20895
+|-
+| '''[[Kišber]]'''
+| [[Keskuzdunajantagaine rand]]
+| [[Komarom Estergom]]
+| 5282
+|-
+| '''[[Kiškore]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Heveš (agj)|Heveš]]
+| 2653
+|-
+| '''[[Kiškunfeled'haza]]'''
+| [[Suvial'föl'd]]
+| [[Bač Kiskun]]
+| 29972
+|-
+| '''[[Kiškunhalaš]]'''
+| [[Suvial'föl'd]]
+| [[Bač Kiskun]]
+| 28427
+|-
+| '''[[Kiškunmajša]]'''
+| [[Suvial'föl'd]]
+| [[Bač Kiskun]]
+| 11766
+|-
+| '''[[Kištarča]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 11975
+|-
+| '''[[Kištelek]]'''
+| [[Suvial'föl'd rand]]
+| [[Čongrad (agj)|Čongrad]]
+| 7020
+|-
+| '''[[Kišujsallaš]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Jas Nad'kun Solnok]]
+| 11367
+|-
+| '''[[Kišvarda]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Jas Nad'kun Solnok]]
+| 16473
+|-
+| '''[[Komadi]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Haidu Bihar]]
+| 5172
+|-
+| '''[[Komarom]]'''
+| [[Keskuzdunajantagaine rand]]
+| [[Komarom Estergom]]
+| 19729
 |}
 
 [[Kategorii:Madjaranman lidnad|!]]
