*Empty MediaWiki Message*

--- a/Abhazii.mw
+++ b/Abhazii.mw
@@ -1,7 +1,7 @@
 {{Valdkund
 | Nimi = Abhazijan Tazobaldkund<br />Аҧсны Аҳәынҭқарра<br />Республика Абхазия
 | Valdkundznam = Coat of arms of Abkhazia.svg
-| Flag = Flag of Abkhazia.png
+| Flag = Flag of Abkhazia.svg
 | Valdkundznam text = Abhazijan valdkundznam
 | Flag text = Abhazijan flag
 | Pälidn = Suhum
