*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -791,6 +791,251 @@
 | [[Keskuzdunajantagaine rand]]
 | [[Komarom Estergom]]
 | 19729
+|-
+| '''[[Komlo]]'''
+| [[Suvidunajantagaine rand]]
+| [[Baran'j (agj)|Baran'j]]
+| 25020
+|-
+| '''[[Kondoroš]]'''
+| [[Suvial'föl'd rand]]
+| [[Bekeš]]
+| 5201
+|-
+| '''[[Kozarmišlen']]'''
+| [[Suvidunajantagaine rand]]
+| [[Baran'j (agj)|Baran'j]]
+| 6109
+|-
+| '''[[Kormend]]'''
+| [[Päivlaskmdunajantagaine rand]]
+| [[Vaš]]
+| 11676
+|-
+| '''[[Korošladan']]'''
+| [[Suvial'föl'd rand]]
+| [[Bekeš]]
+| 4582
+|-
+| '''[[Koseg]]'''
+| [[Päivlaskmdunajantagaine rand]]
+| [[Vaš]]
+| 12055
+|-
+| '''[[Kunhed'es]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Jas Nad'kun Solnok]]
+| 7483
+|-
+| '''[[Kunsentmarton]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Jas Nad'kun Solnok]]
+| 8373
+|-
+| '''[[Kunsentmikloš]]'''
+| [[Suvial'föl'd]]
+| [[Bač Kiskun]]
+| 8515
+|-
+| '''[[Labatlan]]'''
+| [[Keskuzdunajantagaine rand]]
+| [[Komarom Estergom]]
+| 4992
+|-
+| '''[[Laiošmiže]]'''
+| [[Suvial'föl'd]]
+| [[Bač Kiskun]]
+| 11073
+|-
+| '''[[Leben']]'''
+| [[Päivlaskmdunajantagaine rand]]
+| [[D'jor Mošon Šopron]]
+| 3159
+|-
+| '''[[Lend'eltoti]]'''
+| [[Suvidunajantagaine rand]]
+| [[Šomod' (agj)|Šomod']]
+| 3227
+|-
+| '''[[Lenti]]'''
+| [[Päivlaskmdunajantagaine rand]]
+| [[Zal' (agj)|Zal']]
+| 7971
+|-
+| '''[[Letaverteš]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Haidu Bihar]]
+| 7090
+|-
+| '''[[Leten'e]]'''
+| [[Päivlaskmdunajantagaine rand]]
+| [[Zal' (agj)|Zal']]
+| 4053
+|-
+| '''[[Lorinci]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Heveš (agj)|Heveš]]
+| 5880
+|-
+| '''[[Maglod]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 11989
+|-
+| '''[[Magoč]]'''
+| [[Suvidunajantagaine rand]]
+| [[Baran'j (agj)|Baran'j]]
+| 2388
+|-
+| '''[[Mako]]'''
+| [[Suvial'föl'd rand]]
+| [[Čongrad (agj)|Čongrad]]
+| 23573
+|-
+| '''[[Mandok]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Sabol'č Satmar Bereg]]
+| 4188
+|-
+| '''[[Marcali]]'''
+| [[Suvidunajantagaine rand]]
+| [[Šomod' (agj)|Šomod']]
+| 11567
+|-
+| '''[[Mariapoč]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Sabol'č Satmar Bereg]]
+| 2042
+|-
+| '''[[Martfü]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Jas Nad'kun Solnok]]
+| 6435
+|-
+| '''[[Martonvašar]]'''
+| [[Keskuzdunajantagaine rand]]
+| [[Fejer]]
+| 5811
+|-
+| '''[[Matesalka]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Sabol'č Satmar Bereg]]
+| 16957
+|-
+| '''[[Medd'esed'haza]]'''
+| [[Suvial'föl'd rand]]
+| [[Bekeš]]
+| 3691
+|-
+| '''[[Meikut]]'''
+| [[Suvial'föl'd]]
+| [[Bač Kiskun]]
+| 5081
+|-
+| '''[[Mezoberen']]'''
+| [[Suvial'föl'd rand]]
+| [[Bekeš]]
+| 10896
+|-
+| '''[[Mezočat]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Boršod Abaui Zemplen]]
+| 5891
+|-
+| '''[[Mezohed'eš]]'''
+| [[Suvial'föl'd rand]]
+| [[Bekeš]]
+| 4994
+|-
+| '''[[Mezokeresteš]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Boršod Abaui Zemplen]]
+| 3803
+|-
+| '''[[Mezokovačhaza]]'''
+| [[Suvial'föl'd rand]]
+| [[Bekeš]]
+| 6049
+|-
+| '''[[Mezokovešd]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Boršod Abaui Zemplen]]
+| 16538
+|-
+| '''[[Mezotur]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Jas Nad'kun Solnok]]
+| 17337
+|-
+| '''[[Mindsent]]'''
+| [[Suvial'föl'd rand]]
+| [[Čongrad (agj)|Čongrad]]
+| 6685
+|-
+| '''[[Miškolc]]'''
+| [[Pohjoižmad'jaranma]]
+| [[Boršod Abaui Zemplen]]
+| 166823
+|-
+| '''[[Mohač]]'''
+| [[Suvidunajantagaine rand]]
+| [[Baran'j (agj)|Baran'j]]
+| 18604
+|-
+| '''[[Monor]]'''
+| [[Keskuzmad'jaranma]]
+| [[Pešt]]
+| 18395
+|-
+| '''[[Mor]]'''
+| [[Keskuzdunajantagaine rand]]
+| [[Fejer]]
+| 14255
+|-
+| '''[[Morahalom]]'''
+| [[Suvial'föl'd rand]]
+| [[Čongrad (agj)|Čongrad]]
+| 6067
+|-
+| '''[[Mošonmad'arovar]]'''
+| [[Päivlaskmdunajantagaine rand]]
+| [[D'jor Mošon Šopron]]
+| 32720
+|-
+| '''[[Nadudvar]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Haidu Bihar]]
+| 8768
+|-
+| '''[[Nad'atad]]'''
+| [[Suvidunajantagaine rand]]
+| [[Šomod' (agj)|Šomod']]
+| 10734
+|-
+| '''[[Nad'bajom]]'''
+| [[Suvidunajantagaine rand]]
+| [[Šomod' (agj)|Šomod']]
+| 3431
+|-
+| '''[[Nad'ečed]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Sabol'č Satmar Bereg]]
+| 6042
+|-
+| '''[[Nad'halas]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Sabol'č Satmar Bereg]]
+| 5589
+|-
+| '''[[Nad'kallo]]'''
+| [[Pohjoine Al'föl'd]]
+| [[Sabol'č Satmar Bereg]]
+| 9870
+|-
+| '''[[Nad'kaniža]]'''
+| [[Päivlaskmdunajantagaine rand]]
+| [[Zal' (agj)|Zal']]
+| 49302
 |}
 
 [[Kategorii:Madjaranman lidnad|!]]
