--- a/Abhazii.mw
+++ b/Abhazii.mw
@@ -12,7 +12,7 @@
 | Kel' = [[abhazijan kel'|abhazijan]], [[venäkel']] 
 | Valdkundan pämez' = [[Ankvab Aleksandr|Aleksandr Ankvab]]
 | Päministr = [[Lakerbaja Leonid|Leonid Lakerbaja]]
-| Religii = [[hristanuskond]]
+| Religii = [[paganizm]]
 | Valüt = [[venäman rubl']], [[abhazijan apsar]]
 | Internet-domen = 
 | Telefonkod = +7 840, +7 940
