*Empty MediaWiki Message*

--- a/.hu.mw
+++ b/.hu.mw
@@ -1,4 +1,4 @@
-'''.ru''' om [[Mad'jaranma]]n [[DNS|Internet-domen]]. Se om avaitud [[1990]]-nden voden uhokul.
+'''.hu''' om [[Mad'jaranma]]n [[DNS|Internet-domen]]. Se om avaitud [[1990]]-nden voden uhokul.
 
 Mad'jaranman enzne domen om [[.hu]] .
 
