Hungarian grammar rules don't work in Finnic languages. Seriously.

--- a/Heveš_(agj).mw
+++ b/Heveš_(agj).mw
@@ -1,52 +1,25 @@
-'''Heveš agj''' ([[Mad'jaran kel'|mad'j]].:''Heves megye'') om [[Mad'jaranma]]n agj. 
-
-{{Mad'jaranma valdkund subjekt
-|Nimi           = Heveš agj
-|Mad'jaranma nimi = Heveš megye
-|Flag           = 
-|FSCoA          = [[Fail:HevesMegyeCimere.jpg|125px|Heveš agjan znam]]
-|FlagLnk        =  agjan flag
-|CoALnk         = Heveš  agjan znam
-|FSMapName      = 
-|FSCtrWhat      = Keskuz
-|FSCtrNm        = [[Eger]]
-|AreaRnk        = 15
-|TotArea        = 3637
-|WaterPrcnt     =
-|PopRnk         = 15
-|Eläjiden lugu  = 307985
-|PopCtDate      = 2011
-|PopDens        = 89.0
-|GDP            =
-|GDPCtDate      =
-|GDP(PPP)       =
-|FedDistrNm     = 
-|EcRegNm        = 
-|CadNo          = 
-|HeadTtl        = 
-|HeadNm         = 
-|LegislTtl      = 
-|LegislNm       = 
-|MSKS           = 0
-}}
+'''Heveš-agj''' ([[Mad'jaran kel'|mad'j]].: ''Heves megye'') om üks' [[Mad'jaranma]]n agjoišpäi.
 
 == Administrativine jagand ==
 
 === Lidnad ===
-[[Fail:Heves location map.PNG|pisi|eile|Heves agj kartt]]
-Heveš agjas om 11 lidnad:
-
-* [[Belapatfalva]] (Bélapátfalva)
-* [[Eger]]
-* [[Fuzešabon']] (Füzesabony)
-* [[D'jond'još]] (Gyöngyös)
-* [[D'jond'jošpata]] (Gyöngyöspata)
-* [[Hatvan]] 
-* [[Heveš (lidn)|Heveš]] (Heves)
-* [[Kiškore]] (Kisköre)
-* [[Lorinci]] (Lőrinci)
-* [[Petervašara]] (Pétervására)
-* [[Verpelet]] (Verpelét)
+[[Fail:Heves location map.PNG|thumbnail|right|250px|Heveš-agjam kart]]
+Hevešas om 11 lidnad:
+* [[Belapatfal'v]] (''Bélapátfalva'')
+* [[Eger]] (''Eger'')
+* [[Füzešabon']] (''Füzesabony'')
+* [[D'jond'još]] (''Gyöngyös'')
+* [[D'jond'jošpat]] (''Gyöngyöspata'')
+* [[Hatvan]] (''Hatvan'')
+* [[Heveš (lidn)|Heveš]] (''Heves'')
+* [[Kišköre]] (''Kisköre'')
+* [[Lörinci]] (''Lőrinci'')
+* [[Petervašar]] (''Pétervására'')
+* [[Verpelet]] (''Verpelét'')
+Päiči lidnoiš, Hevešas om 121 žilod.
 
 === Rajonad ===
-Heveš agjas om 7 lidnalašt ümbrikod rajonad. Heveš agjas om 121 žilo, eländpunkt.
+Heveš-agjas om 7 rajonad.
+{{stub}}
+
+[[Kategorii:Mad'jaranma]]
