*Empty MediaWiki Message*

--- a/Heveš_(agj).mw
+++ b/Heveš_(agj).mw
@@ -3,7 +3,7 @@
 == Administrativine jagand ==
 
 === Lidnad ===
-[[Fail:Heves location map.PNG|thumbnail|right|250px|Heveš-agjam kart]]
+[[Fail:Heves location map.PNG|thumbnail|right|250px|Heveš-agjan kart]]
 Hevešas om 11 lidnad:
 * [[Belapatfal'v]] (''Bélapátfalva'')
 * [[Eger]] (''Eger'')
