Once again: please leave Hungarian names of populated places here! I'll correct 'em.

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -167,7 +167,7 @@
 | [[Bekeš]]
 | 63752
 |-
-| '''[[Belapatfalv]]'''
+| '''[[Belapatfal'v]]'''
 | [[Pohjoižmad'jaranma]]
 | [[Heveš (agj)|Heveš]]
 | 2996
