in February? or when?..

--- a/.hu.mw
+++ b/.hu.mw
@@ -1,9 +1,7 @@
-'''.hu''' om [[Mad'jaranma]]n [[DNS|Internet-domen]]. Se om avaitud [[1990]]-nden voden uhokul.
-
-Mad'jaranman enzne domen om [[.hu]] .
+'''.hu''' om [[Mad'jaranma]]n [[DNS|Internet-domen]]. Se om avaitud [[1990]]-ndes vodes.
 
 == Irdkosketused ==
-* [http://www.domain.hu/domain/szabalyzat.html]
+* [http://www.domain.hu/domain/szabalyzat.html Domenan sait]
 * [http://www.iana.org/domains/root/db/hu.html IANA-informacii]
 
 {{CcTLD}}
