*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -1038,5 +1038,5 @@
 | 49302
 |}
 
-[[Kategorii:Madjaranman lidnad|!]]
+[[Kategorii:Mad'jaranman lidnad|!]]
 [[Kategorii:Lidnoiden nimikirjutesed]]
