*Empty MediaWiki Message*

--- a/Nagriž.mw
+++ b/Nagriž.mw
@@ -10,6 +10,17 @@ File:Malselvneper.JPG|<small>Nagrhen jured</small>
 
 Nagrhen sötmižsortad nimitase [[turneps]]aks.
 
+== Vepsän muštatišed da ozoitesed nagrhenke sidotud ==
+=== Muštatišed ===
+<blockquote>
+* ''Ei karged nagriž ezmäižeks hapne.''
+</blockquote>
+
+=== Ozoitesed ===
+<blockquote>
+Kehker ku kudmaine, viher ku vast (nagriž).
+</blockquote>
+
 == Irdkosketused ==
 * [http://vepsian.krc.karelia.ru/text/?text_id=97 Kut endo nagr'hen semendolim].
 * [http://vepsian.krc.karelia.ru/text/?text_id=98 Kut tehtas babud nagrhespäi].
