--- a/Eger_(lidn).mw
+++ b/Eger_(lidn).mw
@@ -17,4 +17,5 @@ Pind om läz 92.24 km².
 * {{ITA|#}} [[Arezzo]], [[Italii]]
 * {{GBR|#}} [[Bedford]], [[Anglii]]
 * {{UKR|#}} [[Munkač]], [[Ukrain]]
-* {{PLS|#}} [[Jerikó]], [[Palestin]]<ref>{{cite web|url=http://hvg.hu/itthon/20130907_Eger_testvervarosa_lett_a_palesztin_fennh|title=Jerikó Eger testvérvárosa lett|accessdate=07-09-2013 }}</ref>
+* {{PLS|#}} [[Jerikó]], [[Palestin]]
+[http://hvg.hu/itthon/20130907_Eger_testvervarosa_lett_a_palesztin_fennh]
