*Empty MediaWiki Message*

--- a/Eger_(lidn).mw
+++ b/Eger_(lidn).mw
@@ -1,4 +1,4 @@
-'''Eger''' ( [[Mad'jaran kel'|mad'j]].: Eger) om lidn [[Heveš agj|Heveš agjas]]. Se om  Heveš agjan administrativine da kul'turine keskuz. Eläjiden lugu om läz 54 867 rist.
+'''Eger''' ( [[Mad'jaran kel'|mad'j]].: Eger) om lidn [[Heveš (agj)|Heveš agjas]]. Se om  Heveš agjan administrativine da kul'turine keskuz. Eläjiden lugu om läz 54 867 rist.
 
 Pind om läz 92.24 km².
 
