--- a/Heveš_(agj).mw
+++ b/Heveš_(agj).mw
@@ -6,7 +6,7 @@
 [[Fail:Heves location map.PNG|thumbnail|right|250px|Heveš-agjan kart]]
 Hevešas om 11 lidnad:
 * [[Belapatfal'v]] (''Bélapátfalva'')
-* [[Eger (lidn)|Eger]] (''Eger'')
+* [[Eger (lidn)|Eger]] (''Eger'') - Heveš agjan administrativine keskuz
 * [[Füzešabon']] (''Füzesabony'')
 * [[D'jond'još]] (''Gyöngyös'')
 * [[D'jond'jošpat]] (''Gyöngyöspata'')
