*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -394,7 +394,7 @@
 |-
 | '''[[Eger (lidn)|Eger]]'''
 | [[Pohjoižmad'jaranma]]
-| [[Heveš (agj|Heveš]]
+| [[Heveš (agj)|Heveš]]
 | 56166
 |-
 | '''[[Elek]]'''
