--- a/Boršod_Abaui_Zemplen.mw
+++ b/Boršod_Abaui_Zemplen.mw
@@ -8,7 +8,7 @@ Hevešas om 11 lidnad:
 * [[Abauisanto]] (''Abaújszántó'')
 * [[Al'šožol'c]] (''Alsózsolca'')
 * [[Cigand]] (''Cigánd'')
-* [[Edelen']] (''Edelény'') - Heveš agjan administrativine keskuz
+* [[Edelen']] (''Edelény'') - 
 * [[Emod]] (''Emőd'')
 * [[Enč]] (''Encs'')
 * [[Fel'šožol'c]] (''Felsőzsolca'')
@@ -17,7 +17,7 @@ Hevešas om 11 lidnad:
 * [[Mezočat]] (''Mezőcsát'')
 * [[Mezokövešd]] (''Mezőkövesd'')
 * [[Mezokeresteš]] (''Mezőkeresztes'')
-* [[Miškolc]] (''Miskolc'')
+* [[Miškolc]] (''Miskolc'') - Boršod agjan administrativine keskuz
 * [[N'jekladhaza]] (''Nyékládháza'')
 * [[Onga]] (''Onga'')
 * [[Ozd]] (''Ózd'')
