--- a/Boršod_Abaui_Zemplen.mw
+++ b/Boršod_Abaui_Zemplen.mw
@@ -4,7 +4,7 @@
 
 === Lidnad ===
 [[Fail:HU county Borsod Abauj Zemplen.svg|thumbnail|right|250px|Boršod Abaui Zemplen-agjan kart]]
-Hevešas om 11 lidnad:
+Boršodas om 27 lidnad:
 * [[Abauisanto]] (''Abaújszántó'')
 * [[Al'šožol'c]] (''Alsózsolca'')
 * [[Cigand]] (''Cigánd'')
