--- a/Boršod_Abaui_Zemplen.mw
+++ b/Boršod_Abaui_Zemplen.mw
@@ -33,10 +33,10 @@ Boršodas om 27 lidnad:
 * [[Tisauivaroš]] (''Tiszaújváros'')
 * [[Tokai]] (''Tokaj'')
 
-Päiči lidnoiš, Hevešas om 358 žilod.
+Päiči lidnoiš, Boršodas om 358 žilod.
 
 === Rajonad ===
-Heveš-agjas om 16 rajonad.
+Boršod-agjas om 16 rajonad.
 {{stub}}
 
 [[Kategorii:Mad'jaranma]]
