*Empty MediaWiki Message*

--- a/Boršod_Abaui_Zemplen.mw
+++ b/Boršod_Abaui_Zemplen.mw
@@ -1,14 +1,14 @@
-'''Boršod Abaui Zemplen-agj''' ([[Mad'jaran kel'|mad'j]].: ''Borsod-Abaúj-Zemplen megye'') om üks' [[Mad'jaranma]]n agjoišpäi.
+'''Boršod Abaui Zemplen''' ([[Mad'jaran kel'|mad'j]].: ''Borsod-Abaúj-Zemplen megye'') om üks' [[Mad'jaranma]]n agjoišpäi.
 
 == Administrativine jagand ==
 
 === Lidnad ===
 [[Fail:HU county Borsod Abauj Zemplen.svg|thumbnail|right|250px|Boršod Abaui Zemplen-agjan kart]]
-Boršodas om 27 lidnad:
+Siš agjas om 27 lidnad:
 * [[Abauisanto]] (''Abaújszántó'')
 * [[Al'šožol'c]] (''Alsózsolca'')
 * [[Cigand]] (''Cigánd'')
-* [[Edelen']] (''Edelény'') - 
+* [[Edelen']] (''Edelény'')
 * [[Emod]] (''Emőd'')
 * [[Enč]] (''Encs'')
 * [[Fel'šožol'c]] (''Felsőzsolca'')
@@ -17,7 +17,7 @@ Boršodas om 27 lidnad:
 * [[Mezočat]] (''Mezőcsát'')
 * [[Mezokövešd]] (''Mezőkövesd'')
 * [[Mezokeresteš]] (''Mezőkeresztes'')
-* [[Miškolc]] (''Miskolc'') - Boršod agjan administrativine keskuz
+* [[Miškolc]] (''Miskolc'') - agjan administrativine keskuz
 * [[N'jekladhaza]] (''Nyékládháza'')
 * [[Onga]] (''Onga'')
 * [[Ozd]] (''Ózd'')
@@ -33,10 +33,10 @@ Boršodas om 27 lidnad:
 * [[Tisauivaroš]] (''Tiszaújváros'')
 * [[Tokai]] (''Tokaj'')
 
-Päiči lidnoiš, Boršodas om 358 žilod.
+Päiči lidnoiš, Boršod Abaui Zemplenas om 358 žilod.
 
 === Rajonad ===
-Boršod-agjas om 16 rajonad.
+Boršod Abaui Zemplen-agjas om 16 rajonad.
 {{stub}}
 
 [[Kategorii:Mad'jaranma]]
