--- a/Sabol'č_Satmar_Bereg.mw
+++ b/Sabol'č_Satmar_Bereg.mw
@@ -3,7 +3,7 @@
 == Administrativine jagand ==
 
 === Lidnad ===
-[[Fail:HU county Borsod Abauj Zemplen.svg|thumbnail|right|250px|Sabol'č Satmar Bereg-agjan kart]]
+[[Fail:HU county Szabolcs-Szatmar-Bereg.svg|thumbnail|right|250px|Sabol'č Satmar Bereg-agjan kart]]
 Sabol'čas om 28 lidnad:
 * [[A'iak]] (''Ajak'')
 * [[Baktaloranthaza]] (''Baktalórántháza'')
