--- a/Pešt_(agj).mw
+++ b/Pešt_(agj).mw
@@ -55,7 +55,7 @@ Peštas om 54 lidnad:
 * [[Tura]] (''Tura'')
 * [[Uihart'an]] (''Újhartyán'')
 * [[Ullö]] (''Üllő'')
-* [[Vac]] (''Vác'')
+* [[Vac (lidn)|Vac]] (''Vác'')
 * [[Večeš]] (''Vecsés'')
 * [[Verešed'jhaz]] (''Veresegyház'')
 * [[Višegrad]] (''Visegrád'')
