*Empty MediaWiki Message*

--- a/Bač_Kiškun.mw
+++ b/Bač_Kiškun.mw
@@ -5,29 +5,27 @@
 === Lidnad ===
 [[Fail:HU county Bacs-Kiskun.svg|thumbnail|right|250px|Bač Kiškun-agjan kart]]
 Siš agjas om 21 lidnad:
-
-* [[Bačalmaš]] (''Bácsalmás'')
+* [[Bačal'maš]] (''Bácsalmás'')
 * [[Bai]] (''Baja'')
-* [[Dunajveče]] (''Dunavecse'')
-* [[Haios]] (''Hajós'')
+* [[Dunaveče]] (''Dunavecse'')
+* [[Hajoš]] (''Hajós'')
 * [[Ižak]] (''Izsák'')
-* [[Janošhalma]] (''Jánoshalma'')
-* [[Kaloča]] (''Kalocsa'')
-* [[Kecel]] (''Kecel'')
+* [[Janošhal'm]] (''Jánoshalma'')
+* [[Kaloč]] (''Kalocsa'')
+* [[Kecel']] (''Kecel'')
 * [[Kečkemet]] (''Kecskemét'')
-* [[Kereked'haza]] (''Kerekegyháza'')
+* [[Kereked'haz]] (''Kerekegyháza'')
 * [[Kišköröš]] (''Kiskőrös'')
-* [[Kiškunfeled'haza]] (''Kiskunfélegyháza'')
+* [[Kiškunfeled'haz]] (''Kiskunfélegyháza'')
 * [[Kiškunhalaš]] (''Kiskunhalas'')
-* [[Kiškunmajša]] (''Kiskunmajsa'')
+* [[Kiškunmaiš]] (''Kiskunmajsa'')
 * [[Kunsentmikloš]] (''Kunszentmiklós'')
-* [[Laiošmiže]] (''Lajosmizse'')
-* [[Šolt]] (''Solt'')
-* [[Šoltvadkert]] (''Soltvadkert'')
+* [[Lajošmiže]] (''Lajosmizse'')
+* [[Šol't]] (''Solt'')
+* [[Šol'tvadkert]] (''Soltvadkert'')
 * [[Sabadsallaš]] (''Szabadszállás'')
 * [[Tisakečke]] (''Tiszakécske'')
-* [[Tompa]] (''Tompa'')
-
+* [[Tomp]] (''Tompa'')
 
 Päiči lidnoiš, Bač Kiškunas om 119 žilod.
 
