*Empty MediaWiki Message*

--- a/Pešt_(agj).mw
+++ b/Pešt_(agj).mw
@@ -5,7 +5,6 @@
 === Lidnad ===
 [[Fail:HU county Pest.svg|thumbnail|right|250px|Pešt-agjan kart]]
 Peštas om 54 lidnad:
-
 * [[Abon']] (''Abony'')
 * [[Al'bertirš]] (''Albertirsa'')
 * [[Asod]] (''Aszód'')
@@ -29,35 +28,35 @@ Peštas om 54 lidnad:
 * [[Halastelek]] (''Halásztelek'')
 * [[Išaseg]] (''Isaszeg'')
 * [[Kerepeš]] (''Kerepes'')
-* [[Kištarča]] (''Kistarcsa'')
+* [[Kištarč]] (''Kistarcsa'')
 * [[Maglod]] (''Maglód'')
 * [[Monor]] (''Monor'')
-* [[Nad'jkata]] (''Nagykáta'')
-* [[Nad'jköröš]] (''Nagykőrös'')
-* [[Nad'jmaroš]] (''Nagymaros'')
-* [[Oča]] (''Ócsa'')
+* [[Nad'kat]] (''Nagykáta'')
+* [[Nad'köröš]] (''Nagykőrös'')
+* [[Nad'maroš]] (''Nagymaros'')
+* [[Oč]] (''Ócsa'')
 * [[Örken']] (''Örkény'')
-* [[Pecel]] (''Pécel'')
+* [[Pecel']] (''Pécel'')
 * [[Piliš (lidn)|Piliš]] (''Pilis'')
-* [[Piliščaba]] (''Piliscsaba'')
-* [[Pilišvörösvar]] (''Pilisvörösvár'')
+* [[Piliš'čab]] (''Piliscsaba'')
+* [[Pilišvöröšvar]] (''Pilisvörösvár'')
 * [[Pomaz]] (''Pomáz'')
 * [[Rackeve]] (''Ráckeve'')
-* [[Sazhalombatta]] (''Százhalombatta'')
+* [[Sazhalombatt]] (''Százhalombatta'')
 * [[Sentendre]] (''Szentendre'')
 * [[Sigethalom]] (''Szigethalom'')
 * [[Sigetsentmikloš]] (''Szigetszentmiklós'')
 * [[Sob]] (''Szob'')
-* [[Šuišap]] (''Sülysáp'')
+* [[Šul'šap]] (''Sülysáp'')
 * [[Tapiosele]] (''Tápiószele'')
-* [[Tököl]] (''Tököl'')
+* [[Tököl']] (''Tököl'')
 * [[Törökbalint]] (''Törökbálint'')
-* [[Tura]] (''Tura'')
-* [[Uihart'an]] (''Újhartyán'')
+* [[Tur (lidn, Mad'jaranma)|Tur]] (''Tura'')
+* [[Uihart'jan]] (''Újhartyán'')
 * [[Ullö]] (''Üllő'')
 * [[Vac (lidn)|Vac]] (''Vác'')
 * [[Večeš]] (''Vecsés'')
-* [[Verešed'jhaz]] (''Veresegyház'')
+* [[Verešed'haz]] (''Veresegyház'')
 * [[Višegrad]] (''Visegrád'')
 * [[Žambek]] (''Zsámbék'')
 
