*Empty MediaWiki Message*

--- a/Sabol'č_Satmar_Bereg.mw
+++ b/Sabol'č_Satmar_Bereg.mw
@@ -4,40 +4,40 @@
 
 === Lidnad ===
 [[Fail:HU county Szabolcs-Szatmar-Bereg.svg|thumbnail|right|250px|Sabol'č Satmar Bereg-agjan kart]]
-Sabol'čas om 28 lidnad:
-* [[A'iak]] (''Ajak'')
-* [[Baktaloranthaza]] (''Baktalórántháza'')
-* [[Balkan']] (''Balkány'')
+Sabol'č Satmar Beregas om 28 lidnad:
+* [[Ajak]] (''Ajak'')
+* [[Baktaloranthaz]] (''Baktalórántháza'')
+* [[Bal'kan']] (''Balkány'')
 * [[Čenger]] (''Csenger'')
 * [[Demečer]] (''Demecser'')
 * [[Dombrad]] (''Dombrád'')
 * [[Feherd'jarmat]] (''Fehérgyarmat'')
 * [[Ibran']] (''Ibrány'') 
 * [[Kemeče]] (''Kemecse'')
-* [[Kišvarda]] (''Kisvárda'')
+* [[Kišvard]] (''Kisvárda'')
 * [[Mandok]] (''Mándok'')
 * [[Mariapoč]] (''Máriapócs'')
-* [[Matesalka]] (''Mátészalka'')
+* [[Matesal'k]] (''Mátészalka'')
 * [[Nad'ječed]] (''Nagyecsed'')
-* [[Nad'jhalas]] (''Nagyhalász'')
-* [[Nad'jkallo]] (''Nagykálló'')
-* [[N'jírbator]] (''Nyírbátor'')
-* [[N'jired'haza]] (''Nyíregyháza'') - Sabol'č agjan administrativine keskuz
+* [[Nad'halas]] (''Nagyhalász'')
+* [[Nad'kallo]] (''Nagykálló'')
+* [[N'jirbator]] (''Nyírbátor'')
+* [[N'jired'haz]] (''Nyíregyháza'') — agjan administrativine keskuz
 * [[N'jirlugoš]] (''Nyírlugos'')
-* [[N'jirmada]] (''Nyírmada'')
+* [[N'jirmad]] (''Nyírmada'')
 * [[N'jirtelek]] (''Nyírtelek'')
 * [[Rakamaz]] (''Rakamaz'')
-* [[Tisalok]] (''Tiszalök'')
+* [[Tisalök]] (''Tiszalök'')
 * [[Tisavašvari]] (''Tiszavasvári'')
 * [[Uifeherto]] (''Újfehértó'')
 * [[Vašarošnamen']] (''Vásárosnamény'')
-* [[Vaia]] (''Vaja'')
+* [[Vai]] (''Vaja'')
 * [[Zahon']] (''Záhony'')
 
-Päiči lidnoiš, Sabol'čas om 229 žilod.
+Päiči lidnoiš, siš agjas om 229 žilod.
 
 === Rajonad ===
-Sabol'č-agjas om 13 rajonad.
+Sabol'č Satmar Bereg-agjas om 13 rajonad.
 {{stub}}
 
 [[Kategorii:Mad'jaranma]]
