*Empty MediaWiki Message*

--- a/Boršod_Abaui_Zemplen.mw
+++ b/Boršod_Abaui_Zemplen.mw
@@ -9,25 +9,25 @@ Siš agjas om 27 lidnad:
 * [[Al'šožol'c]] (''Alsózsolca'')
 * [[Cigand]] (''Cigánd'')
 * [[Edelen']] (''Edelény'')
-* [[Emod]] (''Emőd'')
+* [[Emöd]] (''Emőd'')
 * [[Enč]] (''Encs'')
 * [[Fel'šožol'c]] (''Felsőzsolca'')
-* [[Gonc]] (''Gönc'')
-* [[Kazincbarcika]] (''Kazincbarcika'')
-* [[Mezočat]] (''Mezőcsát'')
-* [[Mezokövešd]] (''Mezőkövesd'')
-* [[Mezokeresteš]] (''Mezőkeresztes'')
-* [[Miškolc]] (''Miskolc'') - agjan administrativine keskuz
-* [[N'jekladhaza]] (''Nyékládháza'')
-* [[Onga]] (''Onga'')
+* [[Gönc]] (''Gönc'')
+* [[Kazincbarcik]] (''Kazincbarcika'')
+* [[Mezöčat]] (''Mezőcsát'')
+* [[Mezökövešd]] (''Mezőkövesd'')
+* [[Mezökeresteš]] (''Mezőkeresztes'')
+* [[Miškolc]] (''Miskolc'') — agjan administrativine keskuz
+* [[N'jekladhaz]] (''Nyékládháza'')
+* [[Ong]] (''Onga'')
 * [[Ozd]] (''Ózd'')
 * [[Putnok]] (''Putnok'')
-* [[Rudaban'ja]] (''Rudabánya'')
-* [[Šaiobabon']] (''Sajóbábony'')
-* [[Šaiosentpeter]] (''Sajószentpéter'')
+* [[Rudaban'j]] (''Rudabánya'')
+* [[Šajobabon']] (''Sajóbábony'')
+* [[Šajosentpeter]] (''Sajószentpéter'')
 * [[Šarošpatak]] (''Sárospatak'')
-* [[Šatoraliauihei]] (''Sátoraljaújhely'')
-* [[Sendro]] (''Szendrő'')
+* [[Šatoral'jauihel']] (''Sátoraljaújhely'')
+* [[Sendrö]] (''Szendrő'')
 * [[Serenč]] (''Szerencs'')
 * [[Sikso]] (''Szikszó'')
 * [[Tisauivaroš]] (''Tiszaújváros'')
