в шаблоне лучше вкратце, а то слишком длинный выходит

--- a/Vepsän_zavet.mw
+++ b/Vepsän_zavet.mw
@@ -18,15 +18,15 @@
  | Piduz        = 52 minutad
  | Montaž       = 
  | Operator     = Igor' Kačorovskii
- | Arvlahjad    = «Sibirin kuldaline kedrveza 2009» („Režissöran parahim rad“, „Operatoran parahim rad“, „Muzikankirjutajan parahim rad“)
+ | Arvlahjad    = «Sibirin kuldaline kedrveza 2009»
  | Büdžet       = tundmatoi
  | Salhed       = ''[[direct-to-video]]''
  | Salhed Venämas = 
  | Edeline fil'm    = 
  | Jäl'ghine fil'm  = 
  | Sait         = 
- | imdb_id      = ''iMDb''
- | kp_id        = ''КиноПоиск.Ру''
+ | imdb_id      = 
+ | kp_id        = 
 }}
 '''«Vepsän zavet»''' ([[Venäkel'|ven.]] ''Вепсский завет'') om voden [[2009]] dokumentaline fil'm [[vepsläižed|vepsän rahvahan]] istorijan da kul'turan polhe.
 
