как в гео-шаблонах

--- a/Vepsän_zavet.mw
+++ b/Vepsän_zavet.mw
@@ -1,8 +1,7 @@
 {{Fil'm
- | Nimi         = Vepsän zavet
+ | Nimi         = Vepsän zavet<br />Вепсский завет
  | Kuva         = 
  | Kuvan ümbrikirjutand = «Vepsän zavetan» fil'mankor'
- | Originaline nimi = Вепсский завет
  | Voz'         = [[2009]]
  | Valdkund     = [[Venäma]]
  | Kel'         = [[venäkel'|venän]]
