*Empty MediaWiki Message*

--- a/Tranzit_(fil'm,_2012).mw
+++ b/Tranzit_(fil'm,_2012).mw
@@ -7,7 +7,7 @@
 * [[Röm Elizabet|Elizabet Röm]] – Robin
 * [[Perrin'jo Garol'd|Garol'd Perrin'jo]] – Loseida
 * [[Danahau Rajan|Rajan Danahau]] – Ivers
-* [[Nait Sterling|Sterling Nait]] – Shein
+* [[Nait Sterling|Sterling Nait]] – Šein
 {{stub}}
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
