Заполнено. Опять ерунда какая-то.

--- a/Tranzit_(fil'm,_2012).mw
+++ b/Tranzit_(fil'm,_2012).mw
@@ -1,3 +1,32 @@
+{{Fil'm
+ | Nimi         = Tranzit<br />Transit
+ | Kuva         = 
+ | Kuvan ümbrikirjutand = «Tranzitan» fil'mankor'
+ | Voz'         = [[2012]]
+ | Valdkund     = [[AÜV]]
+ | Kel'         = [[anglijan kel'|anglijan]]
+ | Žanr         = [[triller]]
+ | Režissör     = Antonio Negret
+ | Scenarii     = Maikl Gilvari
+ | Muzikankrjutai = Kristofer Vestleik
+ | Idejan tegii = 
+ | Aktörad      = [[Kevizel Džim|Džim Kevizel]]<br />[[Frein Džeims|Džeims Frein]]<br />[[Beird Dajona|Dajona Beird]]<br />[[Röm Elizabet|Elizabet Röm]]<br />da toižed
+ | Prodüser     = [[Salmon Kortni|Kortni Salmon]]<br />Moše Dajamant
+ | Kompanii     = «[[After Dark Films]]»
+ | Studii       = 
+ | Piduz        = 1 čas 31 minutad
+ | Montaž       = Uil'jam Je<br />Džo Binford-nrmb
+ | Operator     = Jaron Levai
+ | Arvlahjad    = 
+ | Büdžet       = $5,000,000
+ | Salhed       = ''[[direct-to-video]]''
+ | Salhed Venämas = 
+ | Edeline fil'm    = 
+ | Jäl'ghine fil'm  = 
+ | Sait         = 
+ | imdb_id      = 1059836
+ | kp_id        = 464424
+}}
 '''«Tranzit»''' ([[anglijan kel'|angl.]]: ''Transit'') om voden [[2012]] [[AÜV|amerikalaine]] trillerfil'm. Režissör — Antonio Negret.
 
 == Rolid ==
