--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -43,6 +43,17 @@ Regionad:
 * [[Suvial'föl'd]]
 * [[Suvidunajantagaine rand]]
 
+== Praznikad om Mad'jaranmas ==
+* 01. [[Viluku]] - [[Uz' voz']]
+* 15. [[Keväz'ku]] - Mad'jaranman rahvahan praznik
+* [[Äipäiv]]
+* 01. [[Semendku]] - [[Keväden i radon päiv]]
+* [[Stroicanpäiv]]
+* 20. Elonku - Mad'jaranman valdkund praznik
+* 23. Reduku - Mad'jaranman rahvahan praznik
+* 01. Kül'mku - Pühak päiv
+* 25-26. Tal'vku - Raštvad
+
 == Eläjad ==
 
 == Ižanduz ==
